--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,10 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.378.0",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
