--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.6",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
