--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "json-web-token": "^3.2.0",
+    "mongoose": "^8.7.1",
     "nodemon": "^3.1.0"
   }
 }
