--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "json-web-token": "^3.2.0",
     "mongoose": "^8.7.1",
     "nodemon": "^3.1.0"
