--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-timeago": "^7.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -50,6 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-timeago": "^4.1.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
