--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
