--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "nodemon": "^3.1.0"
   }
