--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
