--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -34,7 +34,7 @@
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
     "emoji-mart": "^5.6.0",
@@ -42,29 +42,33 @@
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "next": "14.2.21",
+    "next": "15.1.6",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "19.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
+    "react-dom": "19.0.0",
     "react-icons": "^5.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-timeago": "^7.2.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
