--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.1.3",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.2.6",
